@@ -102,3 +102,4 @@ Changes in version 1.11.x
 + perSampleDominantFeatures: add new arguments (n, other.name, complete)
 + loadFromMetaphlan: support "taxonomy" column for specifying taxonomy
 + cluster: Overwrite old results instead of failing
++ getPrevalence: bugfix, if assay contains NA values, it does not end up to NA anymore.
